# Assistive-Obstacle-Detection

./: .gitignore  README.md  README_用户指南.md  REPAIR_REPORT.md  continue_training_rest.ps1  data_cleaning_report.txt  demo_ui.py  main.py  merge_report.txt  preview_gui.py  pyproject.toml  requirements.txt  run_gui.bat  run_web.bat  safe_resume_train.py  samples_eval.csv  test_ai_voice.py  test_class_names.py  test_gui_buttons.py  test_models.py  train_40ep_new.py  train_80ep_v3.py  train_lr_restart.py  train_resume.py  training_log.txt
